@@ -1,4 +1,4 @@
-package org.gaugekit.browser;
+package org.gaugekit.browser.webdriver;
 
 /**
  * {@link RuntimeException} to be thrown when the given string did not match any {@link BrowserType}.
@@ -9,6 +9,7 @@ public class UnsupportedBrowserTypeException extends RuntimeException {
      * @param string the string not matching any {@link BrowserType}
      */
     public UnsupportedBrowserTypeException(String string) {
-        super(String.format("Unknown browser type \"%s\"", string));
+        super("Unknown browser type \"%s\"".formatted(string));
     }
+
 }
